Adjust code, migration and fix bugs

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -66,7 +66,7 @@
 <!--Footer-->
 <ul class="nav bg-light justify-content-center fixed-bottom">
   <li class="nav-item">
-    <a class="nav-link" style="color: #000033" href="#">Share</a>
+    <%= link_to "Share", users_share_feedbacks_path, class: 'nav-link', style: 'color: #000033' %>
   </li>
   <li class="nav-item">
     <%= link_to "Invite", users_invite_people_path, class: 'nav-link', style: 'color: #000033' %>
