--- a/app/views/users/shares/show.html.erb
+++ b/app/views/users/shares/show.html.erb
@@ -1,7 +1,7 @@
 <!--Show Page-->
 <div class="container" style="margin-top: 100px; height: 100vh">
   <div class="card border-0">
-    <h5 class="card-header text-light text-center" style="background-color: #000033">Claim Prize</h5>
+    <h5 class="card-header text-light text-center" style="background-color: #000033">Share Feedback</h5>
     <%= render 'layouts/errors_message' %>
     <div class="card-body m-3">
       <h3>Winning Bet</h3>
