[Feature 29] Admin invite list

--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -33,6 +33,9 @@
               <li>
                 <%= link_to "Order List", admins_orders_path, class: 'nav-link px-5 text-info' %>
               </li>
+              <li>
+                <%= link_to "Invite List", admins_invite_lists_path, class: 'nav-link px-5 text-info' %>
+              </li>
             </ul>
           </li>
           <li>
