[Feature 32] NewsTicker model

--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -13,28 +13,31 @@
               <i class="fs-4 bi-bootstrap"></i> <span class="ms-1 d-none d-sm-inline"></span>Management</a>
             <ul class="collapse nav flex-column ms-1 border-light" id="submenu1" data-bs-parent="#menu">
               <li class="w-100">
-                <%= link_to "User List", admins_users_path, class: 'nav-link px-5 text-info' %>
+                <%= link_to "User List", admins_users_path, class: 'nav-link px-2 text-info' %>
               </li>
               <li>
-                <%= link_to "Item List", admins_items_path, class: 'nav-link px-5 text-info' %>
+                <%= link_to "Item List", admins_items_path, class: 'nav-link px-2 text-info' %>
               </li>
               <li>
-                <%= link_to "Category List", admins_categories_path, class: 'nav-link px-5 text-info' %>
+                <%= link_to "Category List", admins_categories_path, class: 'nav-link px-2 text-info' %>
               </li>
               <li>
-                <%= link_to "Bet List", admins_bets_path, class: 'nav-link px-5 text-info' %>
+                <%= link_to "Bet List", admins_bets_path, class: 'nav-link px-2 text-info' %>
               </li>
               <li>
-                <%= link_to "Winner List", admins_winners_path, class: 'nav-link px-5 text-info' %>
+                <%= link_to "Winner List", admins_winners_path, class: 'nav-link px-2 text-info' %>
               </li>
               <li>
-                <%= link_to "Offer List", admins_offers_path, class: 'nav-link px-5 text-info' %>
+                <%= link_to "Offer List", admins_offers_path, class: 'nav-link px-2 text-info' %>
               </li>
               <li>
-                <%= link_to "Order List", admins_orders_path, class: 'nav-link px-5 text-info' %>
+                <%= link_to "Order List", admins_orders_path, class: 'nav-link px-2 text-info' %>
               </li>
               <li>
-                <%= link_to "Invite List", admins_invite_lists_path, class: 'nav-link px-5 text-info' %>
+                <%= link_to "Invite List", admins_invite_lists_path, class: 'nav-link px-2 text-info' %>
+              </li>
+              <li>
+                <%= link_to "Newsticker List", admins_news_tickers_path, class: 'nav-link px-2 text-info' %>
               </li>
             </ul>
           </li>
