[Feature 33] Banner model

--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -39,6 +39,9 @@
               <li>
                 <%= link_to "Newsticker List", admins_news_tickers_path, class: 'nav-link px-2 text-info' %>
               </li>
+              <li>
+                <%= link_to "Banner List", admins_banners_path, class: 'nav-link px-2 text-info' %>
+              </li>
             </ul>
           </li>
           <li>
