--- a/app/views/users/share_feedbacks/index.html.erb
+++ b/app/views/users/share_feedbacks/index.html.erb
@@ -1,41 +1,4 @@
-<div class="container">
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    </div>
-    <div class="carousel-inner" style="height: 45vh">
-      <div class="carousel-item active">
-        <img src="/mostafa-meraji-xnvRp8UyKL0-unsplash.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="/lucas-wesney-s-y2HJElONo-unsplash.jpg" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-</div>
-
-<section class="text-light" style="height: 4vh;background-color: #000033">
-  <div class="container">
-    <div class="ticker">
-      <div class="title"></div>
-      <div class="news">
-        <marquee class="news-content">
-          <h4>Hello World</h4>
-        </marquee>
-      </div>
-    </div>
-  </div>
-</section>
-<!--feedback-->
+<%= render "layouts/carousel" %>
 <section style="padding-top: 10px; height: 100vh">
   <div class="container overflow-hidden">
     <%= render 'layouts/errors_message' %>
