--- a/app/views/users/home/index.html.erb
+++ b/app/views/users/home/index.html.erb
@@ -1,63 +1,30 @@
-<div class="container">
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    </div>
-    <div class="carousel-inner" style="height: 45vh">
-      <div class="carousel-item active">
-        <img src="/mostafa-meraji-xnvRp8UyKL0-unsplash.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="/lucas-wesney-s-y2HJElONo-unsplash.jpg" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-</div>
-
-
-<section class="text-light" style="height: 4vh;background-color: #000033">
-  <div>
-    <div class="container">
-      <div class="ticker">
-        <div class="title"></div>
-        <div class="news">
-          <marquee class="news-content">
-            <h4>Hello World</h4>
-          </marquee>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!--feedback-->
+<%= render "layouts/carousel" %>
+<%= render 'layouts/errors_message' %>
 <section style="padding-top: 10px; height: 100vh">
-  <div class="container overflow-hidden">
-    <%= render 'layouts/errors_message' %>
-    <h4>Winners Feedback</h4>
-    <% @winners.each do |winner| %>
-      <div class="card mt-1">
-        <div class="card-body">
-          <div class="row">
-            <div class="col-sm-3">
-              <%= image_tag winner.picture.url, style: 'height:100%; width: 100%' if winner.picture %>
-            </div>
-            <div class="col-sm-9 mt-4">
-              <h4><%= winner.user.username %></h4>
-              <h3><%= winner.comment %></h3>
+  <div class="container">
+    <h4>Winners Experience</h4>
+    <div class="row" style="font-family: Verdana">
+      <% @winners.each do |winner| %>
+        <div class="col-4 d-flex align-self-stretch">
+          <div class="card shadow-none mb-2 border-0 bg-light">
+            <div class="card-body flex-column">
+              <%= link_to users_share_feedback_path(winner), class: 'text-decoration-none' do %>
+                <%= image_tag winner.picture.url, style: 'height:100%; width: 100%' if winner.picture %>
+              <% end %>
             </div>
           </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+      <% if @winners.size == 5 %>
+        <div class="col-4">
+          <%= link_to users_share_feedbacks_path, class: 'img-fluid text-decoration-none text-dark' do %>
+            <div class="card bg-secondary">
+              <div style="aspect-ratio: 1 / 1; display: flex; align-items: center; justify-content: center;">More...</div>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </section>
 <%= render "layouts/nav" %>
