--- a/app/views/users/lotteries/index.html.erb
+++ b/app/views/users/lotteries/index.html.erb
@@ -1,36 +1,13 @@
-<div class="container">
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    </div>
-    <div class="carousel-inner" style="height: 45vh">
-      <div class="carousel-item active">
-        <img src="/mostafa-meraji-xnvRp8UyKL0-unsplash.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="/lucas-wesney-s-y2HJElONo-unsplash.jpg" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-</div>
-
-<div class=" text-light" style="height: 4vh;background-color: #000033"></div>
+<%= render "layouts/carousel" %>
 <section style="padding-bottom: 60px; padding-top: 10px">
   <div class="container overflow-hidden">
     <ul class="nav justify-content-start">
-      <%= link_to "All", users_lotteries_path, class: 'nav-link text-info' %>
+      <%= link_to "All", users_lotteries_path, class:'btn btn-sm m-1  text-white', style: 'background-color:#000033' if params[:category] %>
+      <%= link_to 'All', users_lotteries_path, class:'btn btn-info btn-sm m-1 text-white' unless params[:category] %>
       <% @categories.each do |category| %>
         <li class="nav-item active">
-          <%= link_to category.name, users_lotteries_path(category: category.name), class: "filter nav-link text-info" %>
+          <%= link_to category.name, users_lotteries_path(category: category.name), class:'btn btn-info btn-sm m-1  text-white' if params[:category] == category.name %>
+          <%= link_to category.name, users_lotteries_path(category: category.name), class:'btn btn-sm m-1 text-white', style: 'background-color:#000033' unless params[:category] == category.name %>
         </li>
       <% end %>
     </ul>
