--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -67,7 +67,7 @@
             <td><%= order.user.email %></td>
             <td><%= order.genre %></td>
             <td><%= order.state %></td>
-            <td><%= order.offer.name %></td>
+            <td><%= order.offer&.name %></td>
             <td><%= order.amount %></td>
             <td><%= order.coin %></td>
             <td><%= order.created_at %></td>
