--- a/app/views/users/profiles/show.html.erb
+++ b/app/views/users/profiles/show.html.erb
@@ -1,6 +1,6 @@
-<div class="container" style="margin-top: 100px; height: 110vh">
+<div class="container" style="margin-top: 70px; height: 110vh">
   <%= render 'layouts/errors_message' %>
-  <div class="card border-0">
+  <div class="card">
     <div class="card-body">
       <div class="row">
         <div class="col-3">
@@ -14,11 +14,10 @@
           <label for="colFormLabelSm" class="col-sm-12 col-form-label col-form-label-sm d-block"><span class="text-secondary">Coins:</span>
           </label>
         </div>
-        <div class="mb-2">
-          <a href="#" class="btn form-control text-light" style="background-color: #000033">CASH IN NOW</a>
-        </div>
       </div>
-      <!--action button-->
+      <div class="mb-2">
+        <%= link_to "CASH IN NOW", users_offers_path, class: 'btn form-control text-light', style: 'background-color: #000033' %>
+      </div>
       <div class="row">
         <div class="col">
           <%= link_to "Edit Profile", edit_user_registration_path, class: 'btn form-control text-light', style: 'background-color: #000033' %>
